# hangman

./: README.md
Wisielec-GUI/: dependency-reduced-pom.xml  pom.xml
Wisielec-GUI/src/main/java/: 0.opis.txt  JsonArrayReader.java  JsonObjectReader.java  LobbyGUI.java  LobbyInfo.java  LoginGUI.java  Main.java  RoomPlayerInfo.java  WisielecClientGUI.java
wisielec-serwer/: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  Room.cpp  Room.h  a.out  main.cpp  wisielec-serwer.code-workspace
wisielec-serwer/include/: Game.h  Player.h  Room.h
wisielec-serwer/src/: Game.cpp  Player.cpp  Room.cpp  main.cpp
